# xfce4-moc-plugin

./: .gitignore  README.md  configure.ac
icons/: Makefile.am
icons/32x32/: Makefile.am
icons/scalable/: Makefile.am
panel-plugin/: Makefile.am  commands.c  commands.h  plugin-dialogs.c  plugin-dialogs.h  plugin.c  plugin.h  xfce4-moc-plugin.desktop.in
po/: LINGUAS  Makevars  POTFILES.in  de.po  ru.po
