# $Id$

iconsdir = $(datadir)/icons/hicolor/32x32/apps
icons_DATA =						\
	xfce.plugin.moc.next.png 		\
	xfce.plugin.moc.previous.png 	\
	xfce.plugin.moc.pause.png 		\
	xfce.plugin.moc.play.png 		\
	xfce.plugin.moc.not-run.png 
	

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent syntax=automake:
